Users are able to login

--- a/configuration.properties
+++ b/configuration.properties
@@ -1,1 +1,6 @@
 browser=chrome
+url=https://qa.upgenix.net/web/login
+SalesManagerUser=salesmanager16@info.com
+SalesManagerPassword=salesmanager
+PosManagerUser=posmanager10@info.com
+PosManagerPassword=posmanager
